--- a/src/scss/tpl/header.scss
+++ b/src/scss/tpl/header.scss
@@ -75,6 +75,12 @@
     color: #868686;
 }
 
+.header__callback {
+    @media (max-width:599px) {
+        display: none;
+    }
+}
+
 .header__callback-number {
     position: relative;
     font-size: 16px;
@@ -94,7 +100,7 @@
     background-size: contain;
     position: absolute;
     left: -37px;
-    top: -5 px;
+    top: -5px;
     height: 28px;
     width: 28px;
 
