--- a/src/scss/tpl/header.scss
+++ b/src/scss/tpl/header.scss
@@ -24,7 +24,7 @@
     display: flex;
 }
 
-.header__col_left {
+.header__col_right {
     @media (min-width: 769px) {
         display: none;
     }
